# redbot

./: Dockerfile  LICENSE  Makefile  pdbrc.py  pyproject.toml
.github/workflows/: publish.yml
src/: models.py
src/redbot/: client.py  models.py  redbot.py
