[tool.poetry]
name = "redbot"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]

[tool.poetry.scripts]
redbot = {callable = "redbot.redbot:main"}

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
python-dateutil = "^2.8.2"
python-redmine = {git = "https://github.com/kyokley/python-redmine.git"}
pysocks = "^1.7.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
bpython = "^0.24"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
